fix missing margin

--- a/app/styles/right.scss
+++ b/app/styles/right.scss
@@ -44,6 +44,10 @@
 
           a, input, button {
             margin-left: -1%;
+
+            &.no-margin-left {
+              margin-left: 0;
+            }
           }
 
           button {
